--- a/less/components/button.less
+++ b/less/components/button.less
@@ -34,10 +34,9 @@
     line-height: 1;
     font-size: @badge-font-size;
     text-align: center;
-    min-width: @badge-size;
-    height: @badge-size;
-    line-height: @badge-size;
-    padding: 0 @badge-size;
+    height: @badge-size * 2;
+    line-height: @badge-size * 2;
+    padding: 0 @badge-size / 1.5;
     .translate(-50%, 50%);
     .rounded(@badge-size);
   }
