--- a/less/components/variables.less
+++ b/less/components/variables.less
@@ -33,6 +33,6 @@
 
 //badge
 @badge-font-size: .75em;
-@badge-size: @badge-font-size*2;
+@badge-size: @badge-font-size;
 @badge-bg-color: @list-bg-color;
 @badge-color: @default-color;
